@@ -4,23 +4,13 @@ import kotlin.random.Random
 
 /**
  * Random data generator capable of producing test data for property testing.
- *
- * Despite its "random" property, it is expected to be immutable and pure functions.
  */
 interface Generator<T> {
 
     /**
-     * List of edge case that should always be tested
-     *
-     * Must be immutable.
-     */
-    val edgeCases: List<T>
-
-    /**
      * Returns a sequence of random value.
      *
-     * Must be pure: and It must always return the same value sequence one given [seed]
-     *  * It should provide different sequence for different given [seed]
+     * **Must be pure**: It must always return the same value sequence for the same given [seed]
      *
      * @param seed Seed of the random generation.
      *             Two invocations of the function with the same seed must return the same value sequence
@@ -30,15 +20,12 @@ interface Generator<T> {
     companion object {
 
         /**
-         * Create a random [Generator] without edge case.
+         * Create a simple random [Generator].
          *
          * @param next Function that will be invoked to get a new random parameter.
          *             The function should use the given [Random] generator to ensure predictability of the values
          */
         fun <T> create(next: (Random) -> T): Generator<T> = object : Generator<T> {
-            override val edgeCases: List<T>
-                get() = emptyList()
-
             override fun randoms(seed: Long): Sequence<T> = randomSequence(seed, next)
         }
     }
